# genapputils

./: .clang-format  .gitignore  CMakeLists.txt
.circleci/: config.yml
include/: ie_genapputils.hpp
include/envvars/: EnvVarCache.hpp  EnvVarItem.hpp  EnvVarRegistrar.hpp  IMissingRequiredEnvVarStrategy.hpp  INotRegisteredEnvVarStrategy.hpp  MissingRequiredEnvVarImpls.hpp  NotRegisteredEnvVarImpls.hpp
include/smartparams/: ArgumentsParser.hpp  IMissingRequiredParameterStrategy.hpp  IUnrecognizedTokenStrategy.hpp  MissingRequiredExcep.hpp  MissingRequiredImpls.hpp  ParamItem.hpp  UnrecognizedTokenExcep.hpp  UnrecognizedTokenImpls.hpp
src/: CMakeLists.txt
src/genapputils/: ArgumentsParser.cpp  CMakeLists.txt  EnvVarCache.cpp  EnvVarItem.cpp  EnvVarRegistrar.cpp  EnvVars.cpp  ParamItem.cpp
src/utest/: CMakeLists.txt  env_vars_excep_test.cpp  env_vars_sanity.cpp  main.cpp  smart_params_badtoken_stderr_logging.cpp  smart_params_exceptions.cpp  smart_params_missing_stderr_logging.cpp  smart_params_sanity.cpp
